--- a/src/main/webapp/WEB-INF/pages/form.jspf
+++ b/src/main/webapp/WEB-INF/pages/form.jspf
@@ -1,7 +1,7 @@
 <%@ page contentType="text/html; charset=UTF-8" language="java" %>
 <div class="jumbotron clearfix">
     <h2><fmt:message key="form.title"/></h2>
-    <form action="${pageContext.request.contextPath}/filler" method="post" class="form">
+    <form action="${pageContext.request.contextPath}/fill?${_csrf.parameterName}=${_csrf.token}" method="post" class="form">
         <div class="col-lg-12">
             <c:forEach items="${tags}" var="tag">
                 <input name="${tag.name}" type="text" placeholder="${tag.name}">
